--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "SPA Viewer for Vault.xyz",
   "main": "main.js",
   "dependencies": {
+    "debounce": "^1.2.0",
+    "graphql": "^14.5.8",
+    "graphql-tag": "^2.10.1",
+    "mini.css": "^3.0.1",
     "vue": "^2.6.10",
+    "vue-gql": "^0.2.3",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.0.2",
+    "node-sass": "^4.12.0",
     "poi": "^12.7.3",
+    "sass-loader": "^8.0.0",
     "xo": "^0.25.3"
   },
   "scripts": {
