--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mini.css": "^3.0.1",
     "vue": "^2.6.10",
     "vue-gql": "^0.2.3",
+    "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
