--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "SPA Viewer for Vault.xyz",
   "main": "main.js",
   "dependencies": {
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
     "debounce": "^1.2.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "mini.css": "^3.0.1",
     "vue": "^2.6.10",
-    "vue-gql": "^0.2.3",
+    "vue-apollo": "^3.0.0",
     "vue-router": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
